--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
   <title>Broadway</title>
 </head>
 <body>
-  <div class="header">
+  <div id="header">
     <h1>Broadway Design</h1>
-    <p>Home<br />About<br />Work<br />Team<br />Contact<br /></p>
+    <p class="menu">Home<br />About<br />Work<br />Team<br />Contact<br /></p>
   </div>
   <div class="process">
     <h3>Our Process</h3>
-    <img src=""/>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
     <h4>Identify</h4>
-    <p>We focus on the most important details.</p>
-    <img src=""/>
+    <p class="exp">We focus on the most important details.</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
     <h4>Understand</h4>
-    <p>We study our projects inside out.</p>
-    <img src=""/>
+    <p class="exp">We study our projects inside out.</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
     <h4>Execute</h4>
-    <p>We put everything we have into our work.</p>
+    <p class="exp">We put everything we have into our work.</p>
   </div>
 </body>
 </html>
