--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
     <h4>Execute</h4>
     <p class="exp">We put everything we have into our work.</p>
   </div>
+  <div class="bottom">
+    <h3 class="header_bottom">Designed in New York</h3>
+    <h4>Portfolio</h4>
+    <p class="exp">Coming Soon</p>
+    <h4>Team</h4>
+    <p class="exp">We're Hiring!</p>
+    <h4>Contact</h4>
+    <p class="exp">Phone: (555)-555-5555<br /> E-mail: test@example.com<br />Twitter @test</p>
+  </div>
+  <div id="footer">
+    <p>&copy;Broadway 2016<span class="menu">Home About Work Team Contact</p>
+  </div>
 </body>
 </html>
